--- a/META.yml
+++ b/META.yml
@@ -18,6 +18,7 @@ no_index:
     - t
 requires:
   Mojolicious: 0
+  swat: '>= 0.1.67'
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.0.4
+version: 0.0.5
